--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="deal">
       <img src="https://via.placeholder.com/200" alt="Product">
       <h3>Wireless Earbuds - 60% Off</h3>
-      <a href="#" target="_blank">View Deal</a>
+      <a href="https://amzn.to/4oc3y1b" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
@@ -32,3 +32,4 @@
   </footer>
 </body>
 </html>
+
