--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <section id="deals">
     <div class="deal">
       <img src="https://via.placeholder.com/200" alt="Product">
-      <h3>Wireless Earbuds - 60% Off</h3>
-      <a href="https://amzn.to/4oc3y1b" target="_blank">View Deal</a>
+      <h3>Acer Predator Wired Gaming Mouse - 32% Off</h3>
+      <a href="https://amzn.to/47xOzHN" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
@@ -32,4 +32,5 @@
   </footer>
 </body>
 </html>
+
 
