--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <section id="deals">
     <div class="deal">
       <img src="https://via.placeholder.com/200" alt="Product">
-      <h3>Acer Predator Wired Gaming Mouse - 32% Off</h3>
+      <h3>Acer Predator Wired Gaming Mouse  - 32% Off</h3>
       <a href="https://amzn.to/47xOzHN" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
       <img src="https://via.placeholder.com/200" alt="Product">
-      <h3>Smart Watch - 45% Off</h3>
-      <a href="#" target="_blank">View Deal</a>
+      <h3>Bosch Power Steering Oil(5L) - 24% Off</h3>
+      <a href="https://amzn.to/4qxVMjJ" target="_blank">View Deal</a>
     </div>
   </section>
 
@@ -32,5 +32,6 @@
   </footer>
 </body>
 </html>
+
 
 
