--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       <h3>Bosch Power Steering Oil(5L) - 24% Off</h3>
       <a href="https://amzn.to/4qxVMjJ" target="_blank">View Deal</a>
     </div>
+
+    <div class="deal">
+      <img src="https://via.placeholder.com/200" alt="Product">
+      <h3>Ultra Soft Bristles Toothbrush-5Pcs - 52% Off</h3>
+      <a href="https://amzn.to/47B81Du" target="_blank">View Deal</a>
+    </div>
   </section>
 
   <footer>
@@ -32,6 +38,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
