--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       <h3>Ultra Soft Bristles Toothbrush-5Pcs - 52% Off</h3>
       <a href="https://amzn.to/47B81Du" target="_blank">View Deal</a>
     </div>
+    <div class="deal">
+      <img src="https://via.placeholder.com/200" alt="Product">
+      <h3>Apply 5% Off Coupon | Fire-Boltt BT Calling SmartWatch - 92% Off</h3>
+      <a href="https://amzn.to/48V6ESs" target="_blank">View Deal</a>
+    </div>
   </section>
 
   <footer>
@@ -38,6 +43,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
