--- a/index.html
+++ b/index.html
@@ -31,18 +31,56 @@
       <h3>Ultra Soft Bristles Toothbrush-5Pcs - 52% Off</h3>
       <a href="https://amzn.to/47B81Du" target="_blank">View Deal</a>
     </div>
+    
     <div class="deal">
       <img src="https://via.placeholder.com/200" alt="Product">
       <h3>Apply 5% Off Coupon | Fire-Boltt BT Calling SmartWatch - 92% Off</h3>
       <a href="https://amzn.to/48V6ESs" target="_blank">View Deal</a>
     </div>
-  </section>
 
+    <div class="deal">
+      <img src="https://via.placeholder.com/200" alt="Product">
+      <h3>Reebok Unisex Backpack - 57% Off</h3>
+      <a href="https://amzn.to/4nqEaTV" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://via.placeholder.com/200" alt="Product">
+      <h3>Prestige 24cm Non-Stick Grill Pan - 40% Off</h3>
+      <a href="https://amzn.to/4oF3YwD" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://via.placeholder.com/200" alt="Product">
+      <h3>Garnier Skin Naturals, B.B. Cream - 70% Off</h3>
+      <a href="https://amzn.to/4oJgLOz" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://via.placeholder.com/200" alt="Product">
+      <h3>AmazonBasics 20000 mAh Power Bank 22.5W - 78% Off</h3>
+      <a href="https://amzn.to/433nqee" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://via.placeholder.com/200" alt="Product">
+      <h3>Peter England Men's Skinny Fit Jeans - 48% Off</h3>
+      <a href="https://amzn.to/4qEB0iy" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://via.placeholder.com/200" alt="Product">
+      <h3>Crompton Luxian Infinia 1200 mm Star Rated Energy Efficient Ceiling Fan - 39% Off</h3>
+      <a href="https://amzn.to/47qRba9" target="_blank">View Deal</a>
+    </div>
+  </section>
+  
   <footer>
     <p>© 2025 Discount Deals | Created by Ajay Paul</p>
   </footer>
 </body>
 </html>
+
 
 
 
