--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/41f3PXxMBqL._SX569_.jpg" alt="Product">
       <h3>Crompton Luxian Infinia 1200 mm Star Rated Energy Efficient Ceiling Fan - 39% Off</h3>
       <a href="https://amzn.to/47qRba9" target="_blank">View Deal</a>
     </div>
@@ -80,6 +80,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
