--- a/index.html
+++ b/index.html
@@ -15,55 +15,55 @@
 
   <section id="deals">
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/218MmRfw74L._SX300_SY300_QL70_FMwebp_.jpg" alt="Product">
       <h3>Acer Predator Wired Gaming Mouse  - 32% Off</h3>
       <a href="https://amzn.to/47xOzHN" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/41+kyLY8p3L._SY300_SX300_QL70_FMwebp_.jpg" alt="Product">
       <h3>Bosch Power Steering Oil(5L) - 24% Off</h3>
       <a href="https://amzn.to/4qxVMjJ" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/41M0quU5PVL._SY300_SX300_QL70_FMwebp_.jpg" alt="Product">
       <h3>Ultra Soft Bristles Toothbrush-5Pcs - 52% Off</h3>
       <a href="https://amzn.to/47B81Du" target="_blank">View Deal</a>
     </div>
     
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/41-LtB2zYaL._SY300_SX300_QL70_FMwebp_.jpg" alt="Product">
       <h3>Apply 5% Off Coupon | Fire-Boltt BT Calling SmartWatch - 92% Off</h3>
       <a href="https://amzn.to/48V6ESs" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/71gynrErihL._SY741_.jpg" alt="Product">
       <h3>Reebok Unisex Backpack - 57% Off</h3>
       <a href="https://amzn.to/4nqEaTV" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/311AIuBa2-L._SY300_SX300_QL70_FMwebp_.jpg" alt="Product">
       <h3>Prestige 24cm Non-Stick Grill Pan - 40% Off</h3>
       <a href="https://amzn.to/4oF3YwD" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/31Zv15+GYGL._SY300_SX300_QL70_FMwebp_.jpg" alt="Product">
       <h3>Garnier Skin Naturals, B.B. Cream - 70% Off</h3>
       <a href="https://amzn.to/4oJgLOz" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/31jODQ+0hKL._SY300_SX300_QL70_FMwebp_.jpg" alt="Product">
       <h3>AmazonBasics 20000 mAh Power Bank 22.5W - 78% Off</h3>
       <a href="https://amzn.to/433nqee" target="_blank">View Deal</a>
     </div>
 
     <div class="deal">
-      <img src="https://via.placeholder.com/200" alt="Product">
+      <img src="https://m.media-amazon.com/images/I/711iuEzaYgL._SX569_.jpg" alt="Product">
       <h3>Peter England Men's Skinny Fit Jeans - 48% Off</h3>
       <a href="https://amzn.to/4qEB0iy" target="_blank">View Deal</a>
     </div>
@@ -80,6 +80,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
