--- a/index.html
+++ b/index.html
@@ -73,6 +73,54 @@
       <h3>Crompton Luxian Infinia 1200 mm Star Rated Energy Efficient Ceiling Fan - 39% Off</h3>
       <a href="https://amzn.to/47qRba9" target="_blank">View Deal</a>
     </div>
+
+    <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/41-wAn5MVlL._SX569_.jpg" alt="Product">
+      <h3>Pigeon 4 Pcs Kitchen Knife Set - 61% Off</h3>
+      <a href="https://amzn.to/3JkTlQP" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/71Zf9uUp+GL._SY450_.jpg" alt="Product">
+      <h3>Laptop Stand - 84% Off</h3>
+      <a href="https://amzn.to/4nth8fa" target="_blank">View Deal</a>
+    </div>
+
+     <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/41RekaoN0tL._SY300_SX300_QL70_FMwebp_.jpg" alt="Product">
+      <h3>Hershey's Chocolate Syrup 1.3 kg - 41% Off</h3>
+      <a href="https://amzn.to/3JCwBf9" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/81NE1dhLK2L._SX679_.jpg" alt="Product">
+      <h3>Min. 2 Qnty | Sunfeast Dark Fantasy Choco Chip 350gm - 21% Off</h3>
+      <a href="https://amzn.to/4obFvzb" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/71wbtT5Hn7L._SX679_PIbundle-2,TopRight,0,0_AA679SH20_.jpg" alt="Product">
+      <h3>Dabur Almond Hair Oil - 580ml (290ml*2) - 15% Off</h3>
+      <a href="https://amzn.to/4nwE11A" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/613WCLZgzQL._SY679_.jpg" alt="Product">
+      <h3>TIMEX Women Analog Black Watch - 60% Off</h3>
+      <a href="https://amzn.to/3LfpidM" target="_blank">View Deal</a>
+    </div>
+
+    <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/51TMhFQWtsL._SX679_.jpg" alt="Product">
+      <h3>amazon basics Metal Planters - 80% Off</h3>
+      <a href="https://amzn.to/4oJSFn5" target="_blank">View Deal</a>
+    </div>
+
+        <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/61NZt0SHUgL._SX679_.jpg" alt="Product">
+      <h3>Tata Sampann Chana Dal, 1kg - 38% Off</h3>
+      <a href="https://amzn.to/3LhZRZ2" target="_blank">View Deal</a>
+    </div>
   </section>
   
   <footer>
@@ -80,6 +128,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
