--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 
   <section id="deals">
     <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/71maWXZscfL._SX569_.jpg" alt="Product">
+      <h3>Safari Omega spacious/large laptop backpack with Raincover - 77% Off</h3>
+      <a href="https://amzn.to/3X5a7GK" target="_blank">View Deal</a>
+    </div>
+    
+    <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/715MAWuZnTL._SX679_PIbundle-4,TopRight,0,0_AA679SH20_.jpg" alt="Product">
+      <h3>Vivel Cool Mint Soap, (150g - Pack of 4) - 53% Off</h3>
+      <a href="https://amzn.to/4hJiPnE" target="_blank">View Deal</a>
+    </div>
+    
+    <div class="deal">
       <img src="https://m.media-amazon.com/images/I/41ItNBy0STL._SY300_SX300_QL70_FMwebp_.jpg" alt="Product">
       <h3>Ponds Bright Beauty Facewash 200gm - 62% Off</h3>
       <a href="https://amzn.to/4hELJoJ" target="_blank">View Deal</a>
@@ -230,6 +242,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
