--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 
   <section id="deals">
     <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/61TsRnur0jL._SX679_.jpg" alt="Product">
+      <h3>Dabur Body Lotion 400ml - 50 % Off</h3>
+      <a href="https://amzn.to/47yTbi0" target="_blank">View Deal</a>
+    </div>
+    
+    <div class="deal">
+      <img src="https://m.media-amazon.com/images/I/61FkoqGvnOL._SX679_PIbundle-4,TopRight,0,0_AA679SH20_.jpg" alt="Product">
+      <h3>Good Knight Flash Liquid Vaporiser,Pack Of 4 - 11 % Off</h3>
+      <a href="https://amzn.to/3XuCBtz" target="_blank">View Deal</a>
+    </div>
+    
+    <div class="deal">
       <img src="https://m.media-amazon.com/images/I/81ngJ0fCmkL._SX679_.jpg" alt="Product">
       <h3>Havells Rechargeable Beard Trimmer - 65 % Off</h3>
       <a href="https://amzn.to/4836LdA" target="_blank">View Deal</a>
@@ -416,6 +428,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
